objects/ccrz__E_Product__c.object
<CustomObject>
    <description>e-Commerce Product Master</description>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBU_Product_Location__c</fullName>
        <description>This field will indicate the BMS Instance which determines the location of the product</description>
        <inlineHelpText>This field will indicate the BMS Instance which determines the location of the product</inlineHelpText>
        <label>DBU Product Location</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dbu_Crate_Engine_R2_8__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field identifies if this product is a Crate Engine.</description>
        <inlineHelpText>This field identifies if this product is a Crate Engine.</inlineHelpText>
        <label>Dbu Crate Engine (R2.8)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FIN_BUSINESS_CODE__c</fullName>
        <label>FIN_BUSINESS_CODE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIN_RESP_CODE__c</fullName>
        <label>FIN_RESP_CODE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIN_SUB_BUSINESS_CODE__c</fullName>
        <label>FIN_SUB_BUSINESS_CODE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <formula>IF(ISPICKVAL(LicenseName__c,&quot;Fleet Count&quot;),&apos;Fleet&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Service Plus Basic&quot;),&apos;&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Service Plus Pro&quot;),&apos;&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Service Plus RSGR/Industrial Pro&quot;),&apos;&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Service Plus Lite&quot;),&apos;&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Automotive Basic&quot;),&apos;&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Automotive Lite&quot;),&apos;&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Automotive Pro&quot;),&apos;&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Automotive RSGR/Industrial Pro&quot;),&apos;&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Zap-It&quot;),&apos;ZapIt&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Zap-It OEM&quot;),&apos;ZapItOEM&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Plus Basic&quot;),&apos;&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Plus Lite&quot;),&apos;&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Plus Pro&quot;),&apos;&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Plus RSGR/Industrial Pro&quot;),&apos;&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Komatsu Tier4 Basic&quot;),&apos;&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Komatsu Tier4 Lite&quot;),&apos;&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Komatsu Tier4 Pro&quot;),&apos;&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Pro Plus&quot;),&apos;Plus&apos;,
null)))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Featuregroup__c</fullName>
        <formula>IF(ISPICKVAL(LicenseName__c,&quot;Fleet Count&quot;),&apos;&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Service Plus Basic&quot;),&apos;Basic&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Service Plus Pro&quot;),&apos;Pro&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Service Plus RSGR/Industrial Pro&quot;),&apos;RSGR&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Service Plus Lite&quot;),&apos;Lite&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Automotive Basic&quot;),&apos;Basic&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Automotive Lite&quot;),&apos;Lite&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Automotive Pro&quot;),&apos;Pro&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Automotive RSGR/Industrial Pro&quot;),&apos;RSGR&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Zap-It&quot;),&apos;&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Zap-It OEM&quot;),&apos;&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Plus Basic&quot;),&apos;Basic&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Plus Lite&quot;),&apos;Lite&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Plus Pro&quot;),&apos;Pro&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Plus RSGR/Industrial Pro&quot;),&apos;RSGR&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Komatsu Tier4 Basic&quot;),&apos;Basic&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Komatsu Tier4 Lite&quot;),&apos;Lite&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Komatsu Tier4 Pro&quot;),&apos;Pro&apos;,
IF(ISPICKVAL(LicenseName__c,&quot;Pro Plus&quot;),&apos;&apos;,
null)))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Featuregroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GOMS_Defined_Part_number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GOMS Defined Part number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GOMS_Part_Number__c</fullName>
        <description>Mar-1132</description>
        <label>GOMS Part Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DA</fullName>
                </value>
                <value>
                    <fullName>SES</fullName>
                </value>
                <value>
                    <fullName>FluidWatch</fullName>
                </value>
                <value>
                    <fullName>Ecom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LicenseName__c</fullName>
        <label>LicenseName</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fleet Count</fullName>
                </value>
                <value>
                    <fullName>Service Plus Basic</fullName>
                </value>
                <value>
                    <fullName>Service Plus Pro</fullName>
                </value>
                <value>
                    <fullName>Service Plus RSGR/Industrial Pro</fullName>
                </value>
                <value>
                    <fullName>Service Plus Lite</fullName>
                </value>
                <value>
                    <fullName>MR-HD Automotive Basic</fullName>
                </value>
                <value>
                    <fullName>MR-HD Automotive Lite</fullName>
                </value>
                <value>
                    <fullName>MR-HD Automotive Pro</fullName>
                </value>
                <value>
                    <fullName>MR-HD Automotive RSGR/Industrial Pro</fullName>
                </value>
                <value>
                    <fullName>Zap-It</fullName>
                </value>
                <value>
                    <fullName>Zap-It OEM</fullName>
                </value>
                <value>
                    <fullName>MR-HD Plus Basic</fullName>
                </value>
                <value>
                    <fullName>MR-HD Plus Lite</fullName>
                </value>
                <value>
                    <fullName>MR-HD Plus Pro</fullName>
                </value>
                <value>
                    <fullName>MR-HD Plus RSGR/Industrial Pro</fullName>
                </value>
                <value>
                    <fullName>Komatsu Tier4 Basic</fullName>
                </value>
                <value>
                    <fullName>Komatsu Tier4 Lite</fullName>
                </value>
                <value>
                    <fullName>Komatsu Tier4 Pro</fullName>
                </value>
                <value>
                    <fullName>Pro Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BUS</fullName>
                </value>
                <value>
                    <fullName>OHT</fullName>
                </value>
                <value>
                    <fullName>DEF</fullName>
                </value>
                <value>
                    <fullName>MIN</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>ANO</fullName>
                    <isActive>false</isActive>
                    <label>ANO</label>
                </value>
                <value>
                    <fullName>Anonymous</fullName>
                    <isActive>false</isActive>
                    <label>Anonymous</label>
                </value>
                <value>
                    <fullName>BUS_ACCGRP</fullName>
                    <isActive>false</isActive>
                    <label>BUS_ACCGRP</label>
                </value>
                <value>
                    <fullName>MARINE</fullName>
                    <isActive>false</isActive>
                    <label>MARINE</label>
                </value>
                <value>
                    <fullName>MARINE_ACCGRP</fullName>
                    <isActive>false</isActive>
                    <label>MARINE_ACCGRP</label>
                </value>
                <value>
                    <fullName>MINING</fullName>
                    <isActive>false</isActive>
                    <label>MINING</label>
                </value>
                <value>
                    <fullName>MINING_ACCGRP</fullName>
                    <isActive>false</isActive>
                    <label>MINING_ACCGRP</label>
                </value>
                <value>
                    <fullName>TRUCK ON HIGHWAY</fullName>
                    <isActive>false</isActive>
                    <label>TRUCK ON HIGHWAY</label>
                </value>
                <value>
                    <fullName>TRUCK_ON_HIGHWAY_ACCGRP</fullName>
                    <isActive>false</isActive>
                    <label>TRUCK_ON_HIGHWAY_ACCGRP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OSMGuidanzMobileQuantity__c</fullName>
        <label>OSMGuidanzMobileQuantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSM_DA_FreeProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSM DA FreeProduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Can_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Can_Revoke_And_Ressiue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Revoke And Ressiue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Can_Revoke__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Revoke</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_FreeTrial_Days__c</fullName>
        <label>Free Trial Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSM_SW_FreeTrial_Maximum_Qty__c</fullName>
        <label>Free Trial Maximum Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Show_Assign_User_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Assign User Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_SW_Show_Check_your_email_Msg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Check your email Msg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_Term_and_Condition__c</fullName>
        <label>OSM Term and Condition</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Plus</fullName>
                </value>
                <value>
                    <fullName>Pro</fullName>
                </value>
                <value>
                    <fullName>Lite</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <formula>IF(ISPICKVAL(LicenseName__c,&quot;Fleet Count&quot;),&apos;&apos;, 
IF(ISPICKVAL(LicenseName__c,&quot;Service Plus Basic&quot;),&apos;LD,MR,HD,HHP,Komatsu&apos;, 
IF(ISPICKVAL(LicenseName__c,&quot;Service Plus Pro&quot;),&apos;LD,MR,HD,HHP,Komatsu&apos;, 
IF(ISPICKVAL(LicenseName__c,&quot;Service Plus RSGR/Industrial Pro&quot;),&apos;LD,MR,HD,HHP,Komatsu&apos;, 
IF(ISPICKVAL(LicenseName__c,&quot;Service Plus Lite&quot;),&apos;LD,MR,HD,HHP,Komatsu&apos;, 
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Automotive Basic&quot;),&apos;SIR,RMI&apos;, 
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Automotive Lite&quot;),&apos;SIR,RMI&apos;, 
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Automotive Pro&quot;),&apos;SIR,RMI&apos;, 
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Automotive RSGR/Industrial Pro&quot;),&apos;SIR,RMI&apos;, 
IF(ISPICKVAL(LicenseName__c,&quot;Zap-It&quot;),&apos;&apos;, 
IF(ISPICKVAL(LicenseName__c,&quot;Zap-It OEM&quot;),&apos;&apos;, 
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Plus Basic&quot;),&apos;LD,MR,HD,Komatsu&apos;, 
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Plus Lite&quot;),&apos;LD,MR,HD,Komatsu&apos;, 
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Plus Pro&quot;),&apos;LD,MR,HD,Komatsu&apos;, 
IF(ISPICKVAL(LicenseName__c,&quot;MR-HD Plus RSGR/Industrial Pro&quot;),&apos;LD,MR,HD,Komatsu&apos;, 
IF(ISPICKVAL(LicenseName__c,&quot;Komatsu Tier4 Basic&quot;),&apos;KT4F&apos;, 
IF(ISPICKVAL(LicenseName__c,&quot;Komatsu Tier4 Lite&quot;),&apos;KT4F&apos;, 
IF(ISPICKVAL(LicenseName__c,&quot;Komatsu Tier4 Pro&quot;),&apos;KT4F&apos;, 
IF(ISPICKVAL(LicenseName__c,&quot;Pro Plus&quot;),&apos;Plus&apos;, 
null)))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductGroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Class_Code__c</fullName>
        <label>Product Class Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SW-WEB ACCESS</fullName>
                </value>
                <value>
                    <fullName>PART</fullName>
                </value>
                <value>
                    <fullName>SW-E-DELIVERY</fullName>
                </value>
                <value>
                    <fullName>FLUIDWATCH</fullName>
                </value>
                <value>
                    <fullName>SW E-DELIVERY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Range__c</fullName>
        <label>Product Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LD MR HD HHP Komatsu</fullName>
                </value>
                <value>
                    <fullName>Service Plus</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>SIR,RMI</fullName>
                </value>
                <value>
                    <fullName>LD,MR,HD,HHP,Komatsu</fullName>
                </value>
                <value>
                    <fullName>LD,MR,HD,Komatsu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Reference_Name__c</fullName>
        <label>Product Reference Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Supporting_Text__c</fullName>
        <description>It holds some helping values of bundle products like

Bundle Products
(Helping text)</description>
        <label>Product Supporting Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QSOLType__c</fullName>
        <label>QSOLType</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QSOL_Power_Generation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QSOL Power Generation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rule1__c</fullName>
        <label>Rule1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule2__c</fullName>
        <label>Rule2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stand_Alone_Product__c</fullName>
        <label>Stand_Alone Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Non-Subscription</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version_Display__c</fullName>
        <label>Version Display</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__AlternateName__c</fullName>
        <inlineHelpText>If Alternate Name is not empty - will be used for product name.</inlineHelpText>
        <label>Alternate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__AvailabilityMessageRT__c</fullName>
        <description>Rich Text Field for Message corresponding to the availability of the product. This would contain a message such as &quot;Available&quot; or &quot;Limited&quot;</description>
        <label>Availability Message RT</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__AvailabilityMessage__c</fullName>
        <description>Message corresponding to the availability of the product. This would contain a message such as &quot;Available&quot; or &quot;Limited&quot;</description>
        <label>Availability Message</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Available_Subscription_Frequencies__c</fullName>
        <description>The subscription frequencies that are available for this particular product when ordering the product as a subscription.</description>
        <inlineHelpText>The subscription frequencies that are available for this particular product when ordering the product as a subscription.</inlineHelpText>
        <label>Available Subscription Frequencies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>180</fullName>
                </value>
                <value>
                    <fullName>365</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__AverageRating__c</fullName>
        <description>Formula field - average product rating for this product</description>
        <formula>IF(ccrz__NumberOfReviews__c &gt; 0, ccrz__TotalRating__c / ccrz__NumberOfReviews__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__CoolerpakFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicating that the product requires a cooler pack when shipping</description>
        <label>Coolerpak Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__DryiceFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dry Ice Requirement.</description>
        <label>Dryice Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__DryiceWeight__c</fullName>
        <description>Dry Ice weight required.</description>
        <label>Dryice Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Employment_Level__c</fullName>
        <description>Employment Level Field for the Proposal Request form.</description>
        <label>Employment Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Staff/Union Member</fullName>
                </value>
                <value>
                    <fullName>Foreman</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>The last date that this product will be available.</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__ExcludeFromProductIndex__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Don&apos;t create any product index records for this product. When this option is enabled, the product doesn&apos;t appear in search results or category results on the Product List page version 2.0.</description>
        <inlineHelpText>Don&apos;t create any product index records for this product. When this option is enabled, the product doesn&apos;t appear in search results or category results on the Product List page version 2.0.</inlineHelpText>
        <label>Exclude from Product Index</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__FilterData__c</fullName>
        <description>The combination of the product spec key and spec values into single text field value. The Filter Data field is auto-populated when the Product Spec Index is refreshed.</description>
        <label>Filter Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__GroundFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ground Shipping Requirement</description>
        <label>Ground Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__HazardousFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product is Hazardous.</description>
        <label>Hazardous Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__HazardousOutside48Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Product is Hazardous, when shipped outside the continental US of 48 states.</description>
        <label>Hazardous Outside48 Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Industry__c</fullName>
        <description>Industry to which this product belongs. Editable list of values. Note that this field is not currently used or displaying in B2B Commerce</description>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace</fullName>
                </value>
                <value>
                    <fullName>Chemical</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>DOD</fullName>
                </value>
                <value>
                    <fullName>DOE</fullName>
                </value>
                <value>
                    <fullName>Electric Utility</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Hydro Energy</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Maritime</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Nuclear Energy</fullName>
                </value>
                <value>
                    <fullName>Oil &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>Pulp &amp; Paper</fullName>
                </value>
                <value>
                    <fullName>Railroad</fullName>
                </value>
                <value>
                    <fullName>Shipbuilding</fullName>
                </value>
                <value>
                    <fullName>Telecommunication</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Wind Energy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__InventoryType__c</fullName>
        <description>Describes the high level product types (in terms if inventory control) that need to be handled in the availability API. The implementations themselves will vary per requirements, such as whether or not the data is handled locally or is only read via an external service. This field could also be useful in terms of price display and calculations, such as pricing that differs for purchase vs. monthly rental.

NA - Not Applicable
STANDARD - &quot;off the shelf&quot; item.
RENTAL - Rented item.
CLASS - Seats in a class, conference, etc.
SOFTWARE - Downloaded item that is controlled by licensing rather than physical volume.</description>
        <inlineHelpText>Selects how this product&apos;s inventory is managed.</inlineHelpText>
        <label>InventoryType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>STANDARD</fullName>
                    <default>true</default>
                    <label>STANDARD</label>
                </value>
                <value>
                    <fullName>RENTAL</fullName>
                </value>
                <value>
                    <fullName>CLASS</fullName>
                </value>
                <value>
                    <fullName>DOWNLOAD</fullName>
                </value>
                <value>
                    <fullName>ONSITE CLASS</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Is_Subscription_Auto_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if this product is a subscription and is set to auto renew.  Set to false if otherwise.</description>
        <inlineHelpText>Set to true if this product is a subscription and is set to auto renew.  Set to false if otherwise.</inlineHelpText>
        <label>Is Subscription Auto Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Is_Subscription_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if this product is available as a subscription</description>
        <inlineHelpText>Determines if this product is available as a subscription</inlineHelpText>
        <label>Is Subscription Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Is_Subscription_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether this product is only available as a subscription</description>
        <inlineHelpText>Determines whether this product is only available as a subscription</inlineHelpText>
        <label>Is Subscription Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__LeadTime__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Delivery Lead time for the product</description>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__LongDescRT__c</fullName>
        <description>Rich text field for the Long Description</description>
        <label>LongDescRT</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__LongDesc__c</fullName>
        <description>Product long description</description>
        <label>LongDesc</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__NumberOfReviews__c</fullName>
        <description>Formula - number of reviews submitted for this product</description>
        <label>Number Of Reviews</label>
        <summaryFilterItems>
            <field>ccrz__E_Review__c.ccrz__Rating__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ccrz__E_Review__c.ccrz__Status__c</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>ccrz__E_Review__c.ccrz__Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccrz__OvernightFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Overnight Shipping Requirement.</description>
        <label>Overnight Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__ParentProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to tie multiple products together where the parent product has most of its attributes set, and the child product inherits those</description>
        <label>Parent Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipName>E_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__PortalSiteURL__c</fullName>
        <description>Formula field - utility field to allow admins to view the product detail page for this product</description>
        <formula>HYPERLINK(&quot;/apex/ccrz__ProductDetails?viewState=DetailView&amp;prev=errdlog&amp;sku=&quot; + ccrz__SKU__c, &quot;Product Detail View&quot;)</formula>
        <label>View In Portal Site</label>
        <type>Text</type>
    </fields>
</CustomObject>